fix  middle align for popup

--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -4567,6 +4567,10 @@ footer{
         z-index: 9999;
         max-width: 100%;
         min-height: 0;
+        top:50% !important;
+        -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
     }
 }
 /***** ----------------------------------End style for info/how-it-work-------------------------------------*****/
